# bioprinting-pipeline-livemesh

./: .gitignore  README.md  pyproject.toml
assets/meshes/: scaffold_curved_void.stl
configs/: default.yaml
docs/: ACTION_PLAN.md  DEEP_CURRENTS.md  THESIS_KNOWLEDGE_BASE.md
notebooks/: 00_demo.ipynb  01-ablation-study-autoregressive-kaggle-extended.ipynb  01-ablation-study-autoregressive-kaggle.ipynb  01-ablation-study-detr-kaggle-extended.ipynb  01-ablation-study-detr-kaggle.ipynb  01-ablation-study-kaggle.ipynb  01-ablation-study-polar-kaggle-extended.ipynb  01-ablation-study-polar-kaggle.ipynb  01_ablation_study_kaggle_v0.ipynb  02_volumetric_ablation_kaggle.ipynb  VOLUMETRIC_RECONSTRUCTION.md
src/livemesh/: __init__.py
src/livemesh/controller/: __init__.py  closed_loop.py  depth_fusion.py  depth_sensor.py  wound_bridge.py
src/livemesh/data/: __init__.py  dataset.py  multiview_dataset.py  polar_conversion.py  synthetic.py  synthetic_2d.py
src/livemesh/perception/: __init__.py  autoregressive_decoder.py  detr_decoder.py  encoder.py  polar_decoder.py  volumetric_decoder.py  volumetric_encoder.py
src/livemesh/pipeline/: __init__.py  orchestrator.py
src/livemesh/reconstruction/: __init__.py  benchmarks.py  deep_currents.py  poisson.py
src/livemesh/robot/: __init__.py  inverse_kinematics.py  robot_model.py  stl_analysis.py
src/livemesh/segmentation/: __init__.py  unet.py  wound_pipeline.py
src/livemesh/toolpath/: __init__.py  conformal_map.py  coverage.py  geodesic.py  honeycomb.py  path_to_robot.py  planar_slicer.py  trajectory_planner.py  tsp_solver.py
src/livemesh/training/: ablation.py  evaluate.py  train.py
src/livemesh/utils/: logging_config.py  metrics.py  visualization.py
src/livemesh/visualization/: visualization_3d.py
tests/: test_deep_currents.py  test_geodesic.py  test_reconstruction.py  test_segmentation.py  test_synthetic.py
