[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livemesh"
version = "0.1.0"
description = "Real-time geometric surface reconstruction and geodesic toolpath generation for in-situ bioprinting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Diana Roldan" },
]
keywords = ["bioprinting", "surface-reconstruction", "geodesic", "conformal", "toolpath"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "trimesh>=4.0",
    "open3d>=0.17",
    "potpourri3d>=0.0.8",
    "robust-laplacian>=0.2",
    "scikit-image>=0.21",
    "opencv-python>=4.8",
    "polyscope>=2.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
robot = [
    "roboticstoolbox-python>=1.1",
    "spatialmath-python>=1.1",
]
ot = [
    "pot>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/livemesh"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
