[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livemesh"
version = "0.2.0"
description = "Autonomous in-situ bioprinting: perception, surface reconstruction, geodesic toolpath generation, and robot execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Diana Roldan" },
]
keywords = ["bioprinting", "surface-reconstruction", "geodesic", "conformal", "toolpath"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "trimesh>=4.0",
    "open3d>=0.17",
    "potpourri3d>=0.0.8",
    "robust-laplacian>=0.2",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "polyscope>=2.1",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "Pillow>=10.0",
    "numpy-stl>=3.0",
    "PuLP>=2.7",
    "pandas>=2.0",
    "geodesic-currents @ git+https://github.com/dianisay/geodesic-currents.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
robot = [
    "roboticstoolbox-python>=1.1",
    "spatialmath-python>=1.1",
]
hardware = [
    "pyrealsense2>=2.50.0",
]
ot = [
    "pot>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/livemesh"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
